--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 quarkus.swagger-ui.always-include=true
 
 mp.messaging.outgoing.kogito_outgoing_stream.connector=quarkus-http
-mp.messaging.outgoing.kogito_outgoing_stream.url=http://broker-ingress.knative-eventing.svc.cluster.local/idaas/default
-#mp.messaging.outgoing.kogito_outgoing_stream.url=${K_SINK}
+#mp.messaging.outgoing.kogito_outgoing_stream.url=http://broker-ingress.knative-eventing.svc.cluster.local/idaas/default
+mp.messaging.outgoing.kogito_outgoing_stream.url=${K_SINK}
 #mp.messaging.outgoing.kogito_outgoing_stream.url=http://default-kne-trigger-kn-channel.idaas.svc.cluster.local
 # Maximum Java heap to be used during the native image generation
 quarkus.native.native-image-xmx=4g
