--- a/claims-process/src/main/resources/application.properties
+++ b/claims-process/src/main/resources/application.properties
@@ -9,10 +9,10 @@ mp.messaging.outgoing.kogito_outgoing_stream.url=http://broker-ingress.knative-e
 #mp.messaging.outgoing.kogito_outgoing_stream.url=http://default-kne-trigger-kn-channel.idaas.svc.cluster.local
 # Maximum Java heap to be used during the native image generation
 quarkus.native.native-image-xmx=4g
-quarkus.kubernetes.deployment-target=knative 
+#quarkus.kubernetes.deployment-target=knative 
 quarkus.openshift.part-of=iDaaS_Exchange
 # set the Kubernetes namespace which will be used to run the application
 quarkus.container-image.group=idaas
 # set the container image registry - this is the standard URL used to refer to the internal OpenShift registry
 quarkus.container-image.registry=image-registry.openshift-image-registry.svc:5000
-kogito.messaging.as-cloudevents=true
+#kogito.messaging.as-cloudevents=true
