--- a/claims-process/src/main/resources/application.properties
+++ b/claims-process/src/main/resources/application.properties
@@ -15,4 +15,4 @@ quarkus.openshift.part-of=iDaaS_Exchange
 quarkus.container-image.group=idaas
 # set the container image registry - this is the standard URL used to refer to the internal OpenShift registry
 quarkus.container-image.registry=image-registry.openshift-image-registry.svc:5000
-#kogito.messaging.as-cloudevents=true
+kogito.messaging.as-cloudevents=true
