--- a/claims-process-wf/src/main/docker/Dockerfile.native
+++ b/claims-process-wf/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/claim-process .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/claims-process-wf .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/claim-process
+# docker run -i --rm -p 8080:8080 quarkus/claims-process-wf
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
@@ -23,5 +23,5 @@ COPY --chown=1001:root target/*-runner /work/application
 
 EXPOSE 8080
 USER 1001
- 
+
 CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
