--- a/claims-process-wf/src/main/resources/application.properties
+++ b/claims-process-wf/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 mp.messaging.outgoing.kogito_outgoing_stream.connector=quarkus-http
 #mp.messaging.outgoing.kogito_outgoing_stream.url=${K_SINK}
-mp.messaging.outgoing.kogito_outgoing_stream.url=http://default-kne-trigger-kn-channel.idaas.svc.cluster.local
+mp.messaging.outgoing.kogito_outgoing_stream.url=http://wf-response-kn-channel.idaas.svc.cluster.local
+#mp.messaging.outgoing.workflow-response.url=http://wf-response-kn-channel.idaas.svc.cluster.local
+#mp.messaging.outgoing..connector=quarkus-http
 quarkus.kubernetes-client.trust-certs=true
 quarkus.kubernetes.deployment-target=knative
 quarkus.openshift.build-strategy=docker
@@ -10,4 +12,6 @@ quarkus.container-image.group=idaas
 quarkus.container-image.registry=image-registry.openshift-image-registry.svc:5000
 #quarkus.kubernetes.deploy=true
 #quarkus.kubernetes.deployment-target=openshift
-kogito.events.processinstances.enabled=true
+kogito.events.processinstances.enabled=false
+
+quarkus.openshift.part-of=IDaaS_Exchange
